--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>The Homepage of Bren McCre</h1>
-  <p>I am copying a web developer in Pittsburgh focused on open source and for-good web development</p>
+  <p>I am just messing around with some JS stuff</p>
 </body>
 </html>
