Calling Main.js

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
   <h1>The Homepage of Bren McCre</h1>
   <p>I am just messing around with some JS stuff</p>
+
+
+  <script src="main.js"></script>
 </body>
 </html>
